# serializer version: 1
# name: test_entities[cover.ebro_0001_maletero-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.ebro_0001_maletero',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.DOOR: 'door'>,
    'original_icon': 'mdi:car-back',
    'original_name': 'Maletero',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_maletero',
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': 'maletero',
    'unique_id': 'LSJA0000000000001_maletero',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.ebro_0001_maletero-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Maletero',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:car-back',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.ebro_0001_maletero',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_entities[cover.ebro_0001_techo_solar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.ebro_0001_techo_solar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHADE: 'shade'>,
    'original_icon': 'mdi:car-select',
    'original_name': 'Techo solar',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_techo_solar',
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': 'techo_solar',
    'unique_id': 'LSJA0000000000001_techo',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.ebro_0001_techo_solar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shade',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Techo solar',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:car-select',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.ebro_0001_techo_solar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_entities[cover.ebro_0001_ventanillas-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.ebro_0001_ventanillas',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': 'mdi:car-door',
    'original_name': 'Ventanillas',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_ventanillas',
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': 'ventanillas',
    'unique_id': 'LSJA0000000000001_ventanillas',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[cover.ebro_0001_ventanillas-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Ventanillas',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:car-door',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.ebro_0001_ventanillas',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
